# 86BoxLauncher

./: CMakeLists.txt  README.md
assets-src/: other-icons.txt
assets-src/docs/: MachineDelegate.drawio
assets-src/icons/: README.md
cmake/: DetectQt.cmake
docs/: CMakeLists.txt
icons/86BoxLauncher/: index.theme
pkgs/: 86BoxLauncher.desktop
pkgs/archlinux/: PKGBUILD
pkgs/windows/: 86boxlauncher.iss  README.md
src/: 86boxlauncher.rc  CMakeLists.txt  main.cpp  main.dox
src/data/: CMakeLists.txt  data.dox  machine.cpp  machine.h  settings.cpp  settings.h
src/gui/: CMakeLists.txt  gui.dox  machinedialog.cpp  machinedialog.h  machinedialog.ui  mainwindow.cpp  mainwindow.h  preferencesdialog.cpp  preferencesdialog.h  preferencesdialog.ui  utilities.cpp  utilities.h
src/icons/86BoxLauncher/: index.theme
src/icons/breeze/: README.md
src/mvc/: CMakeLists.txt  machinedelegate.cpp  machinedelegate.h  machinelistmodel.cpp  machinelistmodel.h  mvc.dox
src/utils/: CMakeLists.txt  formatter.cpp  formatter.h  test_formatter.cpp  utilities.cpp  utils.dox
tests/: CMakeLists.txt  test_formatter.cpp  test_machine.cpp
