find_package(Doxygen)
if(${DOXYGEN_FOUND} AND ${DOXYGEN_DOT_FOUND})
  message(STATUS "Doxygen and dot found, adding docs target")

  set(DOXYGEN_PROJECT_LOGO "${PROJECT_SOURCE_DIR}/docs/images/logo.svg")
  set(DOXYGEN_PROJECT_ICON "${PROJECT_SOURCE_DIR}/docs/images/icon.svg")
  set(DOXYGEN_STRIP_FROM_PATH "${PROJECT_SOURCE_DIR}/src")
  set(DOXYGEN_EXTRACT_PRIVATE YES)
  set(DOXYGEN_SORT_MEMBER_DOCS NO)
  set(DOXYGEN_FILE_PATTERNS "*.cpp;*.h;*.dox")
  set(DOXYGEN_IMAGE_PATH "${PROJECT_SOURCE_DIR}/docs/images")
  set(DOXYGEN_HTML_COLORSTYLE TOGGLE)
  set(DOXYGEN_HTML_COLORSTYLE_HUE 45)
  set(DOXYGEN_HTML_COLORSTYLE_SAT 11)
  set(DOXYGEN_HTML_COLORSTYLE_GAMMA 79)
  set(DOXYGEN_DOT_IMAGE_FORMAT svg)

  doxygen_add_docs(docs ${PROJECT_SOURCE_DIR}/src)
endif()
